# whisper-answer-assistant

./: .gitignore  README.md  pyproject.toml  whisper_answer_assistant.py
configs/: keywords.en.txt  settings.yaml
src/waa/: __init__.py  app.py  asr.py  audio.py  cli.py  detect.py  llm.py
tests/: test_detect.py
